Updated template project.

--- a/generators/app/templates/static/index.html
+++ b/generators/app/templates/static/index.html
@@ -52,8 +52,10 @@
   </head>
 
   <body>
-    <!-- build:js game.min.js -->
+    <!-- build:js phaser.min.js -->
     <script src="phaser.js"></script>
+    <!-- /build -->
+    <!-- build:js game.min.js -->
     <script src="game.js"></script>
     <!-- /build -->
     <script>window.app.init()</script>
