New base template, updated sub-generators.
Users are now able to choose between a simpler CommonJS-style project
and another one with application scripts using ECMAScript modules.

--- a/generators/app/templates/static/index.html
+++ b/generators/app/templates/static/index.html
@@ -17,6 +17,7 @@
     <!-- build:js phaser.min.js -->
     <script src="phaser.js"></script>
     <!-- /build -->
+    <!-- NOTE: Add third-party library scripts here. -->
     <!-- build:js game.min.js -->
     <script src="game.js"></script>
     <!-- /build -->
