Removed templates related to the CommonJS project.

--- a/generator/generators/app/templates/scripts/app/index.html
+++ b/generator/generators/app/templates/scripts/app/index.html
@@ -3,7 +3,7 @@
 
   <head>
     <meta charset="utf-8">
-    <title><%= htmlWebpackPlugin.options.title %></title>
+    <title><%%= htmlWebpackPlugin.options.title %></title>
     <style>
       html { box-sizing: border-box; }
       html, body { background: #000; overflow: hidden; -ms-touch-action: none; touch-action: none; }
