Updated default project template.

--- a/packages/generator-phaser-plus-template-default/templates/scripts/app/index.html
+++ b/packages/generator-phaser-plus-template-default/templates/scripts/app/index.html
@@ -3,7 +3,9 @@
 
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     <title><%%= htmlWebpackPlugin.options.title %></title>
+    <meta name="description" content="<%%= htmlWebpackPlugin.options.description %>">
     <style>
       html { box-sizing: border-box; }
       html, body { background: #000; overflow: hidden; -ms-touch-action: none; touch-action: none; }
